interface Aggregate {
    public abstract fun iterator(): Iterator
}