@startuml
title Iteratorパターンクラス図


' 集合体
interface Aggregate{
    iterator()
}
note left: Aggregate

' 具体的な集合体
class ConcreteAggregate{
    iterator()
}
note left: BookShelfIterator

' 反復子
interface Iterator{
    hasNext()
    next()
}
note right: Iterator

' 具体的な反復子
class ConcreteIterator{
    aggregate: Aggregate
    hasNext()
    next()
}
note right: BookShelf

' 配置指定
Aggregate -[hidden]r- Iterator
ConcreteAggregate -[hidden]r- ConcreteIterator 
Aggregate --> Iterator : Creates
ConcreteIterator o--> ConcreteAggregate
Aggregate <|.. ConcreteAggregate
Iterator <|.. ConcreteIterator

@enduml